Html overflow fixed added

--- a/app/assets/sass/components/_webchat.scss
+++ b/app/assets/sass/components/_webchat.scss
@@ -4,6 +4,7 @@
 .wc-html {
   @include mq ($until: tablet) {
     height: 100vh;
+    overflow: hidden;
   }
 }
 .wc-body {
